--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-router": "^2.2.4",
     "react-router-redux": "^4.0.2",
     "redux": "^3.4.0",
-    "redux-thunk": "^2.0.1"
+    "redux-thunk": "^2.0.1",
+    "regenerator-runtime": "^0.13.9"
   }
 }
