--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf dist",
-    "start": "nodemon --delay 1.5 dev.js",
+    "start": "node dev.js",
     "build": "npm run clean && cross-env NODE_ENV=production webpack --config ./webpack.config.production.js --progress --profile --colors",
     "lint": "eslint . --fix"
   },
