--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
+    "babel-register": "^6.7.2",
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "font-awesome": "^4.6.1",
