--- a/package.json
+++ b/package.json
@@ -47,9 +47,11 @@
     "style-loader": "^0.13.1",
     "webpack": "^1.13.0",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0"
+    "webpack-hot-middleware": "^2.10.0",
+    "node": "13.10.1"
   },
   "dependencies": {
+    "node": "13.10.1",
     "babel-register": "^6.7.2",
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
